--- a/style.css
+++ b/style.css
@@ -3,10 +3,26 @@
 
 body {
     margin: 0px;
+    font-family: "Roboto", sans-serif;
 }
 header {
     font-family: 'Shrikhand', cursive;
     text-align: center;
     box-shadow: 0px 0px 5px grey;
     padding: 3px;
+    margin: 0;
+    position: relative;
+}
+
+main .city {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background-color: #f3f3f3;
+    text-align: center;
+    padding: 5px
+}
+main .city i {
+    font-size: 25px;
 }
