--- a/sass/utils/colors.scss
+++ b/sass/utils/colors.scss
@@ -1,2 +1,7 @@
-$lightgrey:#7e7e7e;
+$lightgrey: #7e7e7e;
+$superlightgrey:#F6F6F6;
+$darkgrey: #353535;
+
+
 $purple: #9356dc;
+$tertaire-colors: #99e2d0;
