--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -21,3 +21,24 @@ footer {
     margin: 0;
   }
 }
+#page-resto2 {
+  footer a {
+    color: white;
+    text-decoration: none;
+    list-style: none;
+  }
+}
+  #page-resto3 {
+    footer a {
+      color: white;
+      text-decoration: none;
+      list-style: none;
+    }
+}
+#page-resto4 {
+  footer a {
+    color: white;
+    text-decoration: none;
+    list-style: none;
+  }
+}
