--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,10 @@
 @use "./sass/utils/colors.scss";
 @use "./sass/layout/menus.scss";
 @use "./sass/layout/footer.scss";
-@use "./sass/pages/restaurant.scss";
+@use "./sass/pages/restaurant-1.scss";
+@use "./sass/pages/restaurant-2.scss";
+@use "./sass/pages/restaurant-3.scss";
+@use "./sass/pages/restaurant-4.scss";
 
 
 
