--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -33,3 +33,15 @@ header {
   text-decoration: none;
   color: black;
 }
+#page-resto2 a {
+  text-decoration: none;
+  color: black;
+}
+#page-resto3 a {
+  text-decoration: none;
+  color: black;
+}
+#page-resto4 a {
+  text-decoration: none;
+  color: black;
+}
