finish except read.me

--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
 @use "./sass/layout/explorer.scss";
 @use "./sass/layout/city.scss";
 @use "./sass/layout/work.scss";
+@use"./sass/layout/loader.scss";
 @use "./sass/utils/variables.scss";
 @use "./sass/utils/colors.scss";
 @use "./sass/layout/menus.scss";
