--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -4,8 +4,14 @@
 @mixin hover {
   transform: scale(1.02);
 }
-@mixin heart($font-weight: 400, $color: black, $opacity: 1, $right: 16px, $top: 18px) {
-  @include fontawesome ($font-weight);
+@mixin heart(
+  $font-weight: 400,
+  $color: black,
+  $opacity: 1,
+  $right: 16px,
+  $top: 18px
+) {
+  @include fontawesome($font-weight);
   content: "\f004";
   font-size: 24px;
   position: absolute;
@@ -31,23 +37,20 @@
   );
   transition: transform 150ms;
   margin-top: 20px;
-  
+
   &:hover {
     transform: scale(1.02);
     opacity: 0.9;
     cursor: pointer;
-    
-  
+  }
 }
-}
-@mixin fontawesome ($font-weight: 400){
+@mixin fontawesome($font-weight: 400) {
   display: inline-block;
-  position:absolute;
+  position: absolute;
   font-style: normal;
   font-variant: normal;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   font-family: "Font Awesome 5 Free";
   font-weight: $font-weight;
-  
 }
